cluster/apps/auth/authentik/app/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik
  namespace: auth
  annotations:
    gatus.io/enabled: "true"
    gatus.io/endpoint: |
      group: external
spec:
  parentRefs:
    - name: external-gateway
      namespace: networking
  hostnames:
    - "auth.${SECRET_DOMAIN}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: traefik-middleware-chain-no-auth
      backendRefs:
        - name: authentik-server
          port: 80
